syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/lancer2672/DandelionServer_Go/pb/model";

message Movie {
    int32 id = 1;
    string title = 2;
    int32 duration = 3;
    string description = 4;
    repeated string actor_avatars = 5;
    string trailer = 6;
    string file_path = 7;
    string thumbnail = 8;
    int32 views = 9;
    int32 stars = 10;
    google.protobuf.Timestamp created_at = 11;
}
message MovieGenre {
    int32 movie_id = 1;
    int32 genre_id = 2;
}
message MoviesSeries {
    int32 id = 1;
    int32 movie_id = 2;
    int32 series_id = 3;
}
message WatchingMovie {
    Movie movie = 1;
    float watched_duration = 2;
    google.protobuf.Timestamp last_watched = 3;
}
